istio/lab4-request-routing/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: m-caj-masterfile
spec:
  hosts:
    - m-caj-masterfile
  http:
  - match:
    - headers:
        my-header:
          exact: test
    route:
    - destination:
        host: m-caj-masterfile
        subset: v2
  - route:
    - destination:
        host: m-caj-masterfile
        subset: v1
